--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,13 @@
-<h2 id='title'>Welcome to Ember.js</h2>
+<nav class="navbar navbar-default" role="navigation">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand">Ember Reddit</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li></li>
+    </ul>
+  </div><!-- /.container-fluid -->
+</nav>
+
 
 {{outlet}}
